2005-07-15  Derek Price  <derek@ximbiot.com>

	* glob.m4: Import new version from GNULIB.

2005-06-15  Derek Price  <derek@ximbiot.com>

	* bison.m4 (gl_BISON): Use new build-aux/bison-missing script.

2005-06-10  Derek Price  <derek@ximbiot.com>

	Sync with GNULIB.
	* getcwd-path-max.m4, rename.m4: Update from GNULIB.
	* path-concat.m4: Rename to...
	* filenamecat: ...this.

	Test new stat module.
	* stat.m4: Remove this file.
	* lstat.m4: Don't check for empty string bug.

2005-05-28  Derek Price  <derek@ximbiot.com>

	* glob.m4: s/MISSING_SYS_CDEFS_H/_SYS_CDEFS_H/.  Add comment.

2005-05-25  Derek Price  <derek@ximbiot.com>

	* glob.m4: Don't cater to Solaris here...
	* extensions.m4: ...do it here instead.

2005-05-25  Derek Price  <derek@ximbiot.com>

	* getlogin_r.m4: New module from GNULIB.

2005-05-24  Derek Price  <derek@ximbiot.com>

	* lstat.m4, stat.m4: Define rpl_stat & rpl_lstat when needed.

2005-05-24  Derek Price  <derek@ximbiot.com>

	* glob.m4 (gl_PREREQ_GLOB): Don't look for struct dirent64 or stat64.

2005-05-23  Derek Price  <derek@ximbiot.com>

	* canonicalize.m4, path-concat.m4: Import from GNULIB.

2005-05-23  Derek Price  <derek@ximbiot.com>

	* minmax.m4: New file from GNULIB.

2005-05-19  Derek Price  <derek@ximbiot.com>

	* glob.m4 (gl_PREREQ_GLOB): Check for __posix_getpwnam_r for Solaris.

2005-05-19  Derek Price  <derek@ximbiot.com>

	* glob.m4 (gl_PREREQ_GLOB): Check for <unistd.h>.

2005-05-18  Derek Price  <derek@ximbiot.com>

	* glob.m4 (gl_GLOB): Don't check for <gnu-versions.h> explicitly.
	(gl_PREREQ_GLOB): Check for <sys/cdefs.h>.

2005-05-17  Derek Price  <derek@ximbiot.com>

	* glob.m4 (gl_GLOB): Prefer AC_COMPILE_IFELSE to AC_EGREP_CPP.
	(Suggested by Paul Eggert <eggert@cs.ucla.edu>.)

2005-05-15  Derek Price  <derek@ximbiot.com>

	* glob.m4 (gl_GLOB): Don't call gl_PREREQ_GLOB.
	(gl_PREREQ_GLOB): Replace search for lots of headers by requiring
	AC_HEADER_DIRENT.  dirent64 is a type, not a function.
