@@ -1,4 +1,4 @@
-# pagealign_alloc.m4 serial 1
+#serial 2
 dnl Copyright (C) 2005 Free Software Foundation, Inc.
 dnl This file is free software; the Free Software Foundation
 dnl gives unlimited permission to copy and/or distribute it,
@@ -20,5 +20,5 @@ AC_DEFUN([gl_PREREQ_PAGEALIGN_ALLOC],
   AC_REQUIRE([gl_FUNC_MMAP_ANON])
   AC_REQUIRE([gl_GETPAGESIZE])
   AC_CHECK_FUNCS_ONCE([posix_memalign])
-  AC_CHECK_HEADERS_ONCE([fcntl.h unistd.h])
+  AC_CHECK_HEADERS_ONCE([unistd.h])
 ])
